# qualicharge

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  issues.md  renovate.json
data/: bench.csv  (+3 more)
src/api/: .dockerignore  CHANGELOG.md  Dockerfile  Pipfile  Procfile  cron.json  data_retention_procedure.sql  logging-config.dev.yaml  logging-config.prod.yaml  postdeploy.sh  pyproject.toml  servers.conf.erb  start.sh
src/api/qualicharge/: __init__.py  __main__.py  alembic.ini  cache.py  cli.py  conf.py  db.py  exceptions.py
src/api/qualicharge/afirev/: __init__.py  client.py  models.py
src/api/qualicharge/api/: __init__.py  utils.py
src/api/qualicharge/auth/: __init__.py  factories.py  models.py  oidc.py  schemas.py  utils.py
src/api/qualicharge/factories/: __init__.py  dynamic.py  static.py  tariff.py
src/api/qualicharge/fixtures/: __init__.py  operational_units.py
src/api/qualicharge/migrations/: __init__.py  env.py
src/api/qualicharge/models/: __init__.py  dynamic.py  static.py  tariff.py  utils.py
src/api/qualicharge/schemas/: __init__.py  audit.py  core.py  geo.py  sql.py  static.py  tariff.py  tariff_utils.py  utils.py
src/api/scripts/: clean-old-activity.sql  clean-orphans.sql  data_retention_procedure.sql
src/api/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_cli.py  test_db.py
src/api/tests/afirev/: __init__.py  test_client.py  test_models.py
src/api/tests/api/: __init__.py
src/api/tests/auth/: __init__.py  test_oidc.py  test_schemas.py  test_utils.py
src/api/tests/fixtures/: __init__.py  afirev.py  app.py  asynchronous.py  cli.py  db.py
src/api/tests/models/: __init__.py  test_dynamic.py  test_static.py  test_tariff.py  test_utils.py
src/api/tests/schemas/: __init__.py  test_audit.py  test_sql.py  test_static.py  test_tariff_utils.py  test_utils.py
src/client/: CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/client/qcc/: __init__.py  __main__.py  client.py  conf.py  exceptions.py  http.py  models.py
src/client/qcc/cli/: __init__.py  api.py  auth.py  codes.py  manage.py  session.py  static.py  status.py  tariff.py  utils.py
src/client/qcc/endpoints/: __init__.py  auth.py  base.py  dynamic.py  manage.py  static.py  tariff.py
src/client/tests/: __init__.py  conftest.py  test_client.py  test_http.py
src/client/tests/cli/: __init__.py  test_auth.py  test_main.py  test_manage.py  test_session.py  test_static.py  test_status.py  test_tariff.py
src/client/tests/endpoints/: __init__.py  test_auth.py  test_dynamic.py  test_manage.py  test_static.py  test_tariff.py
src/dashboard/: CHANGELOG.md  Dockerfile  Pipfile  Procfile  Procfile.dev  cron.json  pyproject.toml  readme.md  start.sh
src/dashboard/apps/: __init__.py
src/dashboard/apps/auth/: __init__.py  admin.py  apps.py  backends.py  factories.py  forms.py  mails.py  middleware.py  mixins.py  models.py  urls.py  views.py
src/dashboard/apps/consent/: __init__.py  admin.py  apps.py  exceptions.py  factories.py  forms.py  helpers.py  managers.py  mixins.py  models.py  schemas.py  settings.py  signals.py  urls.py  utils.py  validators.py  views.py
src/dashboard/apps/core/: __init__.py  abstract_models.py  admin.py  annuaire_entreprise_api.py  apps.py  context_processors.py  factories.py  helpers.py  mails.py  managers.py  mixins.py  models.py  utils.py  validators.py  views.py
src/dashboard/apps/dashboard/: asgi.py  settings.py  urls.py  wsgi.py
src/dashboard/apps/home/: __init__.py  apps.py  urls.py  views.py
src/dashboard/apps/renewable/: __init__.py  admin.py  apps.py  factories.py  forms.py  helpers.py  managers.py  models.py  urls.py  views.py
src/dashboard/dashboard/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/dashboard/dashboard/fixtures/: dsfr_fixtures.json
src/dashboard/dashboard/tests/: __init__.py
src/dashboard/templates/: 403.html  404.html  500.html  base.html
src/dashboard/templates/blocks/: footer.html  header.html  language_selector.html  logout.html  main_menu.html
src/dashboard/templates/components/: _contact_link.html
src/dashboard/templates/registration/: login.html
src/dashboard/tests/: __init__.py  test_fake.py
src/prefect/: CHANGELOG.md  Dockerfile  Pipfile  Procfile  Procfile.dev  __inactivated__cron.json  clean-offline-workers.sh  cron.json  post-deploy.sh  prefect-deploy-all.sh  prefect.yaml  prefect_dev.yaml  pyproject.toml  servers.conf.erb  start.sh
src/prefect/cooling/: __init__.py  sessions.py  statuses.py
src/prefect/indicators/: __init__.py  conf.py  db.py  models.py  run.py  schemas.py  strategy.py  types.py  up.py  utils.py
src/prefect/indicators/extract/: e3.py  e4.py
src/prefect/indicators/historicize/: up.py
src/prefect/indicators/infrastructure/: __init__.py  i1.py  i4.py  i7.py  t1.py  t8.py
src/prefect/indicators/usage/: __init__.py  c1.py  c2.py  u10.py  u11.py  u12.py  u13.py  u14.py  u5.py  u6.py  u9.py
src/prefect/quality/: __init__.py  flows.py
src/prefect/quality/checkpoints/: full.py  static.py
src/prefect/quality/expectations/: __init__.py  dynamic.py  parameters.py  pdc.py  static.py
src/prefect/quality/flows/: __init__.py  dynamic.py  quality_run.py  static.py
src/prefect/quality/templates/: quality-by-unit.md.j2  static-by-amenageur.md.j2
src/prefect/rtet/: fonction_afir.py  interfaces_afir_qualicharge.py
src/prefect/tests/: __init__.py  conftest.py  parameters.py
src/prefect/tests/cooling/: __init__.py  test_sessions.py  test_statuses.py
src/prefect/tests/extract/: __init__.py  test_e4.py
src/prefect/tests/historicize/: _test_up.py  test_up.py
src/prefect/tests/infrastructure/: __init__.py  _test_i1.py  _test_i4.py  _test_i7.py  _test_t1.py  _test_utils.py  test_db.py  test_i1.py  test_i4.py  test_i7.py  test_t1.py  test_t8.py  test_up.py  test_utils.py
src/prefect/tests/quality/: __init__.py  test_dynamic.py  test_static.py
src/prefect/tests/tiruert/: __init__.py  test_carbure.py  test_run.py  test_submit.py
src/prefect/tiruert/: __init__.py  carbure.py  run.py  submit.py
(+428 files in other folders)
