[project]
name = "qualicharge"
version = "0.33.1"
requires-python = "~=3.12.0"
dependencies = [
    "alembic==1.18.4",
    "annotated-types==0.7.0",
    "cachetools==7.0.5",
    "email-validator==2.3.0",
    "fastapi==0.135.3",
    "geoalchemy2[shapely]==0.18.4",
    "geopandas==1.1.3",
    "httpx[cli]==0.28.1",
    "pandas==3.0.2",
    "passlib[bcrypt]==1.7.4",
    "postgresql-audit==0.17.1",
    "psycopg[pool, binary]==3.3.3",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    "pydantic-extra-types[all]==2.11.1",
    "pydantic-settings==2.13.1",
    "pyinstrument==5.1.2",
    "pyjwt==2.12.1",
    "python-multipart==0.0.24",
    "questionary==2.1.1",
    "sentry-sdk[fastapi]==2.57.0",
    "sqlalchemy-timescaledb==0.4.1",
    "sqlalchemy-utils==0.42.1",
    "sqlmodel==0.0.38",
    "typer==0.24.1",
    "uvicorn[standard]",
]

[project.scripts]
qcm = "qualicharge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black==26.3.1",
    "csvkit==2.2.0",
    "honcho==2.0.0",
    "locust==2.43.4",
    "mypy==1.20.0",
    "pandas-stubs==3.0.0.260204",
    "polyfactory==3.3.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-httpx==0.36.0",
    "ruff==0.15.9",
    "types-cachetools==6.2.0.20260317",
    "types-passlib==1.7.7.20260211",
    "types-python-jose==3.5.0.20260402",
    "types-requests==2.33.0.20260402",
]

[tool.uv]
package = true
link-mode = "copy"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
qualicharge = { path = ".", editable = true }

[tool.coverage.run]
omit = [
  "qualicharge/migrations/*"
]

[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=qualicharge"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
exclude = [
  "migrations",
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.params.Depends",
  "fastapi.params.Query",
  "fastapi.Query",
]

[tool.mypy]
plugins = "pydantic.mypy"
files = "./**/*.py"
exclude = [
  "qualicharge/migrations/"
]

[[tool.mypy.overrides]]
module = [
  "postgresql_audit.*",
  "shapely.*",
  "sqlalchemy_utils.*",
]
ignore_missing_imports = true
