[project]
name = "qualicharge-client"
version = "0.3.0"
requires-python = "~=3.12.0"
description = "A python client and CLI for the QualiCharge API"
authors = [
  {name = "Julien Maupetit", email="julien@maupetit.net"}
]
license = "MIT"
readme = "README.md"
dependencies = [
  "anyio[trio]==4.12.0",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "typer==0.21.0",
]

[project.scripts]
qcc = "qcc.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "black==25.12.0",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-httpx==0.36.0",
  "ruff==0.14.10",
]

[tool.uv]
package = true
link-mode = "copy"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
qcc = { path = ".", editable = true }

[tool.hatch.build.targets.wheel] 
packages = ["qcc"] 

# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=qcc"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
plugins = "pydantic.mypy"
files = "./**/*.py"
