#
# QualiCharge Dashboard package
#
[project]
name = "qualicharge-dashboard"
version = "0.2.0"
requires-python = "~=3.12.0"
dependencies = [
  "Django==5.2.7",
  "django-anymail==13.1",
  "django-dsfr==3.2.0",
  "django-environ==0.12.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==5.2.7",
  "gunicorn==23.0.0",
  "jsonschema==4.25.1",
  "mozilla-django-oidc==4.0.1",
  "psycopg[pool,binary]==3.2.12",
  "python-dateutil==2.9.0.post0",
  "qualicharge-client==0.3.0",
  "requests==2.32.5",
  "sentry-sdk[django]==2.43.0",
  "whitenoise==6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "black==25.9.0",
  "django-debug-toolbar==6.1.0",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "honcho==2.0.0",
  "mock==5.2.0",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-django==4.11.1",
  "pytest-httpx==0.35.0",
  "responses==0.25.8",
  "ruff==0.14.3",
  "types-mock==5.2.0.20250924",
  "types-python-dateutil==2.9.0.20251008",
  "types-requests==2.32.4.20250913",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
qualicharge-dashboard = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
  "apps", 
  "dashboard", 
]

# Third party packages configuration
[tool.coverage.run]
omit = [
  "migrations/*",
  "dashboard/asgi.py",
  "dashboard/wsgi.py",
  "dashboard/tests/*",
  "apps/**/tests/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --cov-report term-missing --cov=apps --cov=dashboard"
DJANGO_SETTINGS_MODULE = "dashboard.settings"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
    "dasboard/tests",
    "apps/**/tests",
]

[tool.ruff]
target-version = "py310"
# Exclude a variety of commonly ignored directories.
exclude = [
  "migrations",
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = [
  "migrations"
]

[[tool.mypy.overrides]]
module = [
    "environ"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "dashboard.settings"
ignore_missing_model_attributes = true

[tool.djlint]
profile="django"
line_break_after_multiline_tag = true
max_blank_lines=1
indent=2
files=[
    "templates",
    "dashboard/",
    "apps/",
]
