#
# QualiCharge prefect package
#
[project]
name = "qualicharge-prefect"
version = "0.0.1"

# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=indicators --cov=quality --cov=cooling"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"
# Exclude a variety of commonly ignored directories.
exclude = []

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
plugins = "pydantic.mypy"
files = "./**/*.py"

[[tool.mypy.overrides]]
module = [
  "data7.*", 
  "great_expectations.*", 
  "pyarrow", 
  "ruamel.*", 
  "s3fs",
]
ignore_missing_imports = true
